hard-gists/6bb9ddb5d904b7275c62/run.log
=== Docker Run Log for 6bb9ddb5d904b7275c62 ===
Started at: Mi 29. Okt 16:49:10 CET 2025

[2025-10-29 16:49:11] START: Running container for 6bb9ddb5d904b7275c62
[2025-10-29 16:49:11] SUCCESS: Container d4a8e83962819c42cf6580a1c4f4f22b5a13b7f30ad72b847aa5a36ceeca8227 started for 6bb9ddb5d904b7275c62
=== Container logs for 6bb9ddb5d904b7275c62 ===
  File "/snippet.py", line 75
    print format_string % (time_print, photo_id, width,
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6bb9ddb5d904b7275c62 ===
[2025-10-29 16:49:13] INFO: Container d4a8e83962819c42cf6580a1c4f4f22b5a13b7f30ad72b847aa5a36ceeca8227 has stopped
